--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,22 +3,22 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/SecondFragment">
+    app:startDestination="@id/MainFragment">
 
     <fragment
-        android:id="@+id/FirstFragment"
-        android:name="test.beeloggerbluetooth.FirstFragment"
-        android:label="@string/first_fragment_label"
-        tools:layout="@layout/fragment_first">
+        android:id="@+id/SettingsFragment"
+        android:name="test.beeloggerbluetooth.SettingsFragment"
+        android:label="@string/settings_fragment_label"
+        tools:layout="@layout/fragment_settings">
         <action
-            android:id="@+id/action_FirstFragment_to_SecondFragment"
-            app:destination="@id/SecondFragment" />
+            android:id="@+id/action_SettingsFragment_to_MainFragment"
+            app:destination="@id/MainFragment" />
     </fragment>
     <fragment
-        android:id="@+id/SecondFragment"
-        android:name="test.beeloggerbluetooth.SecondFragment"
-        android:label="@string/second_fragment_label"
-        tools:layout="@layout/fragment_second">
+        android:id="@+id/MainFragment"
+        android:name="test.beeloggerbluetooth.MainFragment"
+        android:label="@string/main_fragment_label"
+        tools:layout="@layout/fragment_main">
     </fragment>
     <fragment
         android:id="@+id/currentDataFragment"
@@ -35,8 +35,8 @@
         android:label="@string/fragment_help"
         tools:layout="@layout/fragment_help"/>
     <action
-        android:id="@+id/action_global_SecondFragment"
-        app:destination="@id/SecondFragment" />
+        android:id="@+id/action_global_MainFragment"
+        app:destination="@id/MainFragment" />
     <action
         android:id="@+id/action_global_helpFragment"
         app:destination="@id/helpFragment" />
@@ -44,6 +44,6 @@
         android:id="@+id/action_global_currentDataFragment"
         app:destination="@id/currentDataFragment" />
     <action
-        android:id="@+id/action_global_FirstFragment"
-        app:destination="@id/FirstFragment" />
+        android:id="@+id/action_global_SettingsFragment"
+        app:destination="@id/SettingsFragment" />
 </navigation>
