--- a/app/src/main/res/layout/device_name.xml
+++ b/app/src/main/res/layout/device_name.xml
@@ -11,8 +11,8 @@
      limitations under the License.
 -->
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/tw_btDeviceNameAdress"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="5dp"
-    android:textSize="18sp"
-    />
+    android:textSize="18sp" />
