color themes night and day added

--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="?attr/background_color"
     tools:context=".SettingsFragment">
 
     <Button
@@ -11,6 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Save"
+        android:textColor="?attr/button_text_color"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -22,6 +24,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
+        android:background="?attr/lv_background_color"
         android:ems="10"
         android:inputType="textPersonName"
         android:minHeight="48dp"
@@ -36,6 +39,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
+        android:background="?attr/lv_background_color"
         android:ems="10"
         android:inputType="textPersonName"
         android:minHeight="48dp"
@@ -50,6 +54,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
+        android:background="?attr/lv_background_color"
         android:ems="10"
         android:inputType="textPersonName"
         android:minHeight="48dp"
@@ -64,6 +69,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
+        android:background="?attr/lv_background_color"
         android:ems="10"
         android:inputType="textPersonName"
         android:minHeight="48dp"
@@ -78,6 +84,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
+        android:background="?attr/lv_background_color"
         android:ems="10"
         android:inputType="textPersonName"
         android:minHeight="48dp"
@@ -92,6 +99,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
+        android:background="?attr/lv_background_color"
         android:ems="10"
         android:inputType="textPersonName"
         android:minHeight="48dp"
@@ -106,6 +114,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
+        android:background="?attr/lv_background_color"
         android:ems="10"
         android:inputType="textPersonName"
         android:minHeight="48dp"
@@ -120,6 +129,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
+        android:background="?attr/lv_background_color"
         android:ems="10"
         android:inputType="textPersonName"
         android:minHeight="48dp"
@@ -216,6 +226,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
+        android:background="?attr/lv_background_color"
         android:ems="10"
         android:inputType="textPersonName"
         android:minHeight="48dp"
@@ -230,6 +241,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="8dp"
+        android:background="?attr/lv_background_color"
         android:ems="10"
         android:inputType="textPersonName"
         android:minHeight="48dp"
@@ -244,6 +256,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
+        android:background="?attr/lv_background_color"
         android:ems="10"
         android:inputType="textPersonName"
         android:minHeight="48dp"
