--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="?attr/background_color"
     tools:context=".MainFragment">
 
     <Button
@@ -13,6 +14,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="List Devices"
+        android:textColor="?attr/button_text_color"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -23,7 +25,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:listSelector="@color/purple_500"
+        android:listSelector="?attr/colorPrimaryVariant"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -37,6 +39,7 @@
         android:layout_marginTop="16dp"
         android:drawableLeft="@drawable/my_filename"
         android:text="Get"
+        android:textColor="?attr/button_text_color"
         app:layout_constraintStart_toEndOf="@+id/textView13"
         app:layout_constraintTop_toBottomOf="@+id/ListBtDevices" />
 
@@ -48,6 +51,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
+        android:background="?attr/lv_background_color"
         android:contentDescription="Received Text"
         android:textIsSelectable="true"
         app:layout_constraintBottom_toTopOf="@+id/button_save"
@@ -62,6 +66,7 @@
         android:layout_marginEnd="8dp"
         android:drawableLeft="@drawable/my_bluetooth_notconnected"
         android:text="Connect"
+        android:textColor="?attr/button_text_color"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/bt_ListBtDevices" />
 
@@ -95,6 +100,7 @@
         android:layout_marginBottom="8dp"
         android:drawableLeft="@drawable/my_save"
         android:text="Save"
+        android:textColor="?attr/button_text_color"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -106,6 +112,7 @@
         android:layout_marginTop="16dp"
         android:drawableLeft="@drawable/my_download"
         android:text="Data"
+        android:textColor="?attr/button_text_color"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btGetLastTime" />
 
@@ -116,6 +123,7 @@
         android:layout_marginStart="8dp"
         android:drawableLeft="@drawable/my_new_file"
         android:text="New File"
+        android:textColor="?attr/button_text_color"
         app:layout_constraintStart_toEndOf="@+id/button_save"
         app:layout_constraintTop_toTopOf="@+id/button_save" />
 
@@ -125,6 +133,7 @@
         android:layout_height="29dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
+        android:background="?attr/lv_background_color"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/bt_Send_fn"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
@@ -145,6 +154,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="12dp"
         android:text="Get"
+        android:textColor="?attr/button_text_color"
         app:layout_constraintStart_toEndOf="@+id/textView14"
         app:layout_constraintTop_toBottomOf="@+id/bt_Send_fn" />
 
@@ -155,6 +165,7 @@
         android:layout_marginEnd="8dp"
         android:drawableLeft="@drawable/my_upload"
         android:text="upload"
+        android:textColor="?attr/button_text_color"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/bt_Send_data"
         app:layout_constraintTop_toTopOf="@+id/bt_Send_data" />
@@ -193,6 +204,7 @@
         android:layout_height="29dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
+        android:background="?attr/lv_background_color"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/btGetLastTime"
         app:layout_constraintTop_toBottomOf="@+id/textView15" />
