--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -56,8 +56,10 @@
         android:textIsSelectable="true"
         app:layout_constraintBottom_toTopOf="@+id/button_save"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/bt_Send_data" />
+        app:layout_constraintTop_toBottomOf="@+id/bt_Send_data"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/bt_Connect"
