--- a/app/src/main/res/layout/fragment_help.xml
+++ b/app/src/main/res/layout/fragment_help.xml
@@ -144,7 +144,7 @@
             <Switch
                 android:id="@+id/sw_debug"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="48dp"
                 android:checked="false"
                 android:text="Debugmode" />
 
